file: add navbar component

--- a/src/create.html
+++ b/src/create.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Create Page</title>
+    <link rel="stylesheet" href="./style/create-page.css" />
 </head>
-<body>
-    <header class="header">
-        <div></div>
+<body class="screen-color">
+    <!-- header section -->
+    <header class="header header-size">
+        <article>Dairy Application</article>
+        <img src="./icon/hamburger.svg" class="icon-burger" alt="hamburger menu bar">
     </header>
+
+    <!-- main body content -->
+    <main class="body">
+        <section class="hero">
+            <img src="./icon/imagedino.svg" class="dinosour-image" alt="dinosour image">
+        </section>
+        <footer>
+            
+        </footer>
+    </main>
     
 </body>
 </html>
