file: create Navbar

--- a/src/create.html
+++ b/src/create.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Page</title>
     <link rel="stylesheet" href="./style/create-page.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 <body class="screen-color">
     <!-- header section -->
@@ -15,13 +16,14 @@
 
     <!-- main body content -->
     <main class="body">
+        <!-- hero section FFFCFC-->
         <section class="hero">
             <img src="./icon/imagedino.svg" class="dinosour-image" alt="dinosour image">
         </section>
-        <footer>
-            
-        </footer>
+        <section class="content">
+        </section>
     </main>
+
     
 </body>
 </html>
