file: add create page

--- a/src/create.html
+++ b/src/create.html
@@ -27,7 +27,7 @@
     <footer class="footer">
         <div class="footer-width">
             <article class="footer-info">
-                <a class="title">More Details</a>
+                <a class="title">More Details :</a>
                 <p>
                     A Dairy Web application project made with creative and dedication which offers an innovative and
                      comprehensive platform for users to manage their daily tasks, schedules, and activities.
@@ -38,11 +38,12 @@
                     <img src="./icon/gmail.svg" class="image-gmail" alt="gmail image">
                     <p class="image-gmail-text">sokchanseiha@gmail.com</p>
                 </div>
+
                 <div class="image-box">
                     <img src="./icon/astronut.svg" class="image-astronut" alt="astronut image">
                 </div>
             </div>
-        </div>
+        </div> 
     </footer>
 
     
