--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style/header.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="screen-color">
     
 </body>
 
