file: fix srouce URL for image

--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Page</title>
-    <link rel="stylesheet" href="./style/create-page.css" />
-    <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/header.css" />
+    <link rel="stylesheet" href="../style/header.css" />
+    <link rel="stylesheet" href="../style/footer.css" />
+    <link rel="stylesheet" href="../style/header.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
-<body class="screen-color">
-    
+<body style="background-color: red;">
+    <header-section path=".."></header-section>
 </body>
 
-<script type="module" src="./components/header.js"></script>
-<script type="module" src="./components/footer.js"></script>
+<script type="module" src="../components/header.js"></script>
+<script type="module" src="../components/footer.js"></script>
 </html>
