file: delete save button border

--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -16,12 +16,12 @@
     <!-- main body content -->
     <main class="whole-content">
         <section class="content-area" id="form">
-            <form class="customization" >
+            <form class="customization">
                 <div class="left-option">
                     <a href="../create.html"><img class="arrow" src="../icon/arrow leave.svg" alt=""></a>
-                    <input class="title-input" placeholder="Untitled ..." type="text">
+                    <input class="title-input" id="title-input" placeholder="Untitled ..." type="text">
                 </div>
-                <button>
+                <button class="save-button">
                     <img class="save" src="../icon/save.svg" alt="">
                 </button>
             </form>
