--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Update Note</title>
+    <title>Create Note</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <form id="update-form">
-      <input type="text" id="title-update" placeholder="Title" required />
+    <form id="create-form">
+      <input type="text" id="title-create" placeholder="Title" required />
       <textarea
-        id="message-update"
+        id="message-create"
         placeholder="Description"
         required
       ></textarea>
-      <input type="date" id="date-update" required />
-      <button type="submit" id="update-button">Update</button>
+      <input type="date" id="date-create" required />
+      <button type="submit" id="save-button">Save</button>
     </form>
     <script src="../components/create.js"></script>
   </body>
