clear testing files.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
 
     <!-- entry lists -->
     <section class="content">
-
+      <!-- card render from local storage -->
+      <div id="notes-container"></div>
       <!-- create page go to-->
       <div class="create-button" name="create button">
         <a href="./pages/create.html">
