--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -17,6 +17,6 @@
       <input type="date" id="date-update" required />
       <button type="submit" id="update-button">Update</button>
     </form>
-    <script src="../components/create.js"></script>
+    <script src="../components/update.js"></script>
   </body>
 </html>
