file: finish functionality'

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <form id="create-form">
+      <img src="../icon/arrow leave.svg" id="arrow-return">
       <input type="text" id="title-create" placeholder="Title" required />
       <textarea
         id="message-create"
