--- a/src/pages/delete.html
+++ b/src/pages/delete.html
@@ -8,9 +8,17 @@
   </head>
   <body>
     <div id="delete-confirmation">
+      <input type="text" id="title-delete" placeholder="Title" required />
+      <textarea
+        id="message-delete"
+        placeholder="Description"
+        required
+      ></textarea>
+      <input type="date" id="date-delete" required />
       <p>Are you sure you want to delete this note?</p>
       <button id="confirm-delete">Yes</button>
-      <button onclick="window.location.href='index.html'">No</button>
+      <img src="../icon/arrow leave.svg" id="arrow-return">
+      <button onclick="window.location.href='../index.html'">No</button>
     </div>
     <script src="../components/delete.js"></script>
   </body>
