--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <form id="update-form">
+      <img src="../icon/arrow leave.svg" id="arrow-return">
       <input type="text" id="title-update" placeholder="Title" required />
       <textarea
         id="message-update"
