file: change font size

--- a/src/index.html
+++ b/src/index.html
@@ -34,27 +34,24 @@
       </div>
 
       <div class="category">
-        <span class="category-box">All</span>
-        <span class="category-box">Favorites</span>
-        <span class="category-box">Recents</span>
+        <h4 class="category-box">All</h4>
+        <h4 class="category-box">Favorites</h4>
+        <h4 class="category-box">Recents</h4>
       </div>
 
-      <div class="">
+      <div>
+        <div  class="entries-content" id="notes-container"></div>
 
-        <div id="notes-container"></div>
-
-        <div class="Note" data-id="${id}">
+        <!-- <div class="Note" data-id="${id}">
           <div class="Note-header">
             <h2 class="Note-title">${title}</h2>
-            <!-- <h2 class="Note-title">New date</h2> -->
+
           </div>
           <div class="Note-body">
             <p class="Note-description">${description}</p>
-            <!-- <p class="Note-description">Wowowwwwww</p> -->
           </div>
           <div class="option">
             <span class="Note-date">${date}</span>
-            <!-- <span class="Note-date">2024-06-02</span> -->
             <div class="Note-footer">
               <button class="button read" onclick="window.location.href='./pages/read.html?id=${id}'">
                 <img class="read" src="./icon/view.svg" alt="Read icon" /></button>        
@@ -65,20 +62,17 @@
               </button> 
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="Note" data-id="${id}">
+        <!-- <div class="Note" data-id="${id}">
           <div class="Note-header">
             <h2 class="Note-title">${title}</h2>
-            <!-- <h2 class="Note-title">New date</h2> -->
           </div>
           <div class="Note-body">
             <p class="Note-description">${description}</p>
-            <!-- <p class="Note-description">Wowowwwwww</p> -->
           </div>
           <div class="option">
             <span class="Note-date">${date}</span>
-            <!-- <span class="Note-date">2024-06-02</span> -->
             <div class="Note-footer">
               <button class="button read" onclick="window.location.href='./pages/read.html?id=${id}'">
                 <img class="read" src="./icon/view.svg" alt="Read icon" /></button>        
@@ -89,20 +83,17 @@
               </button> 
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="Note" data-id="${id}">
+        <!-- <div class="Note" data-id="${id}">
           <div class="Note-header">
             <h2 class="Note-title">${title}</h2>
-            <!-- <h2 class="Note-title">New date</h2> -->
           </div>
           <div class="Note-body">
             <p class="Note-description">${description}</p>
-            <!-- <p class="Note-description">Wowowwwwww</p> -->
           </div>
           <div class="option">
             <span class="Note-date">${date}</span>
-            <!-- <span class="Note-date">2024-06-02</span> -->
             <div class="Note-footer">
               <button class="button read" onclick="window.location.href='./pages/read.html?id=${id}'">
                 <img class="read" src="./icon/view.svg" alt="Read icon" /></button>        
@@ -113,7 +104,7 @@
               </button> 
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
