--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Create Page</title>
-  <link rel="stylesheet" href="./style/create-page.css" />
-  <link rel="stylesheet" href="./style/footer.css" />
-  <link rel="stylesheet" href="./style/header.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./style/style.css" />
 </head>
 
 <body class="screen-color">
