--- a/src/pages/read.html
+++ b/src/pages/read.html
@@ -4,18 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delete Note</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Read Note</title>
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
-<body>
-    <div id="delete-confirmation">
-        <img src="../icon/arrow leave.svg" id="arrow-return">
-        <input type="text" id="title-read" placeholder="Title" required />
-        <textarea id="message-read" placeholder="Description" required></textarea>
-        <input type="date" id="date-read" required />
-    </div>
-    <script src="../components/read.js"></script>
+<body class="body">
+
+    <header-section path=".."></header-section>
+
+    <main class="whole-content">
+        <div class="content-area" id="delete-confirmation">
+            <div class="upper-area">
+                <img src="../icon/arrow leave.svg" id="arrow-return">
+                <input type="text" id="title-read" placeholder="Title" required />
+            </div>
+            <textarea id="message-read" placeholder="Description" required></textarea>
+            <input type="date" id="date-read" required />
+        </div>
+    </main>
+
+    <footer-section path=".."></footer-section>
 </body>
 
+<script src="../components/read.js"></script>
+<script src="../components/header.js"></script>
+<script src="../components/footer.js"></script>
 </html>
