--- a/src/pages/read.html
+++ b/src/pages/read.html
@@ -15,11 +15,13 @@
     <main class="whole-content">
         <div class="content-area" id="delete-confirmation">
             <div class="upper-area">
-                <img src="../icon/arrow leave.svg" id="arrow-return">
-                <input type="text" id="title-read" placeholder="Title" required />
+                <div class="left-arrow">
+                    <img class="arrow" src="../icon/arrow leave.svg" id="arrow-return">
+                    <input class="title-input" type="text" id="title-read" placeholder="Title" required />
+                </div>
             </div>
-            <textarea id="message-read" placeholder="Description" required></textarea>
-            <input type="date" id="date-read" required />
+            <textarea class="description-input" id="message-read" placeholder="Description" required></textarea>
+            <input class="date-input" type="date" id="date-read" required />
         </div>
     </main>
 
