--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -13,17 +13,16 @@
       <form class="content-area" id="update-form">
         <div class="upper-area">
           <div class="left-arrow">
-            <img src="../icon/arrow leave.svg" id="arrow-return">
-            <input type="text" id="title-update" placeholder="Title" required />
+            <img class="arrow" src="../icon/arrow leave.svg" id="arrow-return">
+            <input class="title-input" type="text" id="title-update" placeholder="Title" required />
           </div>
-          <button type="submit" id="update-button">Update</button>
+          <button class="save" type="submit" id="update-button">
+            <img class="save-button" src="../icon/save.svg" alt="">
+          </button>
         </div>
         <textarea
-          id="message-update"
-          placeholder="Description"
-          required
-        ></textarea>
-        <input type="date" id="date-update" required />
+        class="description-input" id="message-update" placeholder="Description" required ></textarea>
+        <input class="date-input" type="date" id="date-update" required />
       </form>
 
     </div>
