file: add fonts

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Create Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@0;1&family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 
@@ -30,15 +33,14 @@
         </a>
       </div>
 
+      <!-- categories menu option -->
       <div class="category">
-        <h4 class="category-box">All</h4>
-        <h4 class="category-box">Favorites</h4>
-        <h4 class="category-box">Recents</h4>
+        <h4 class="category-box">What's on your mind?</h4>
       </div>
 
+      <!-- entries card list rendered from JavaScript -->
       <div>
         <div  class="entries-content" id="notes-container"></div>
-
       </div>
 
     </section>
@@ -49,6 +51,7 @@
   <footer-section></footer-section>
 </body>
 
+  <!-- link to the JavaScript to get intereaction with create.js and components -->
 <script type="module" src="./components/header.js"></script>
 <script type="module" src="./components/footer.js"></script>
 <script type="module" src="script.js"></script>
