--- a/src/pages/delete.html
+++ b/src/pages/delete.html
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body class="body">
+    <!-- "header section" exported from component-->
     <header-section path=".."></header-section>
 
+    <!-- whole main content -->
     <div class="whole-content">
-
       <div class="content-area" id="delete-confirmation">
+        <!-- upper area of the create form -->
         <div class="upper-area">
+          <!-- return arrow & title shows-->
           <div class="left-arrow">
             <img class="arrow" src="../icon/arrow leave.svg" id="arrow-return">
             <input class="title-input" type="text" id="title-delete" placeholder="Title" required />
           </div>
 
+          <!-- button to confirm the deletion -->
           <button class="delete-button" id="confirm-delete">
             <img src="../icon/delete.svg" alt="">
           </button>
         </div>
+
+        <!-- text area being displayed -->
         <textarea
           class="description-input"
           id="message-delete"
@@ -29,18 +35,17 @@
           required
         ></textarea>
 
+        <!-- input date area -->
         <input class="date-input" type="date" id="date-update" required />
 
-        
-  
-  
-        <!-- <button onclick="window.location.href='../index.html'">No</button> -->
       </div>
     </div>
 
+  <!-- "footer section" exported from component-->
     <footer-section path=".."></footer-section>
   </body>
 
+  <!-- link to the JavaScript to get intereaction with create.js and components -->
   <script src="../components/delete.js"></script>
   <script src="../components/header.js"></script>
   <script src="../components/footer.js"></script>
